--- a/.env.production
+++ b/.env.production
@@ -1,25 +1,50 @@
-APP_NAME=Apolonia
+APP_NAME="Apolonia"
 APP_ENV=production
-APP_KEY=base64:ewhNNOLfA6SpmJ3x9FDsreOw+Q1yFsmN4RwfpCGd1wA=
+APP_KEY=base64:HB73/u/EbTluYkOefjE86Ypv/97ODsLxiCMpZtIKM64=
 APP_DEBUG=false
-APP_URL=https://tu-app.run.app
+APP_TIMEZONE=UTC
+APP_URL=https://apolonia-74063582642.us-central1.run.app
+
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+
+APP_MAINTENANCE_DRIVER=file
+# APP_MAINTENANCE_STORE=database
+
+PHP_CLI_SERVER_WORKERS=4
+
+BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
+LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=error
+LOG_LEVEL=debug
 
+# Base de datos SQLite
 DB_CONNECTION=sqlite
-DB_DATABASE=/tmp/database.sqlite
+# DB_HOST se deja vacío para SQLite
+# DB_PORT se deja vacío para SQLite
+# DB_DATABASE se configura automáticamente como database/database.sqlite
+# DB_USERNAME no se necesita para SQLite
+# DB_PASSWORD no se necesita para SQLite
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
+
+BROADCAST_CONNECTION=log
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=database
+
+CACHE_STORE=database
+CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
@@ -32,3 +57,11 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+VITE_APP_NAME="${APP_NAME}"
