--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,23 @@
 steps:
-  # Build the container image
+  # Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args:
+    args: 
       - 'build'
       - '-t'
       - 'gcr.io/$PROJECT_ID/apolonia:$COMMIT_SHA'
       - '-t'
       - 'gcr.io/$PROJECT_ID/apolonia:latest'
       - '.'
-
-  # Push the container image to Container Registry
+  
+  # Push to Container Registry with commit SHA
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'push'
-      - 'gcr.io/$PROJECT_ID/apolonia:$COMMIT_SHA'
-
+    args: ['push', 'gcr.io/$PROJECT_ID/apolonia:$COMMIT_SHA']
+  
+  # Push to Container Registry with latest tag
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'push'
-      - 'gcr.io/$PROJECT_ID/apolonia:latest'
-
-  # Deploy container image to Cloud Run
+    args: ['push', 'gcr.io/$PROJECT_ID/apolonia:latest']
+  
+  # Deploy to Cloud Run con volumen montado para SQLite
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -36,8 +33,16 @@ steps:
       - '--allow-unauthenticated'
       - '--memory'
       - '512Mi'
+      - '--cpu'
+      - '1'
       - '--port'
       - '8080'
+      - '--max-instances'
+      - '10'
+      - '--min-instances'
+      - '0'
+      - '--execution-environment'
+      - 'gen2'
 
 images:
   - 'gcr.io/$PROJECT_ID/apolonia:$COMMIT_SHA'
@@ -46,3 +51,5 @@ images:
 options:
   machineType: 'E2_HIGHCPU_8'
   logging: CLOUD_LOGGING_ONLY
+
+timeout: '1200s'
